@@ -104,6 +104,14 @@ class DefaultWalletActorTest extends AkkaSpec("WalletActorTest") with BitcoinjTe
   val serializedWallet = new ByteArrayOutputStream()
   var tx: ImmutableTransaction = _
 
+  it must "manage bitcoins blocking with idempotency" in new Fixture {
+    instance ! WalletActor.BlockBitcoins(funds3, 3.BTC)
+    expectMsg(WalletActor.BlockedBitcoins(funds3))
+    instance ! WalletActor.BlockBitcoins(funds3, 3.BTC)
+    expectMsg(WalletActor.BlockedBitcoins(funds3))
+    instance ! WalletActor.UnblockBitcoins(funds3)
+  }
+
   it must "save the state of the bitcoins blocked" in new Fixture {
     instance ! WalletActor.BlockBitcoins(funds1, 1.BTC)
     expectMsg(WalletActor.BlockedBitcoins(funds1))
@@ -116,21 +124,18 @@ class DefaultWalletActorTest extends AkkaSpec("WalletActorTest") with BitcoinjTe
     wallet.delegate.saveToFileStream(serializedWallet)
   }
 
-  it must "manage bitcoins blocking with idempotency" in new Fixture {
-    instance ! WalletActor.BlockBitcoins(funds3, 3.BTC)
-    expectMsg(WalletActor.BlockedBitcoins(funds3))
-    instance ! WalletActor.BlockBitcoins(funds3, 3.BTC)
-    expectMsg(WalletActor.BlockedBitcoins(funds3))
-    instance ! WalletActor.UnblockBitcoins(funds3)
-  }
-
   it must "recover its previous state" in new Fixture {
     override def useLastPersistenceId = true
     override def buildWallet() = SmartWallet.loadFromStream(
       new ByteArrayInputStream(serializedWallet.toByteArray))
-    instance ! WalletActor.BlockBitcoins(funds2, 1.BTC)
-    expectMsg(WalletActor.BlockedBitcoins(funds2))
     wallet.estimatedBalance shouldBe 8.9.BTC
+    instance ! WalletActor.ReleaseDeposit(tx)
+    eventually {
+      wallet.estimatedBalance shouldBe 10.BTC
+    }
+    instance ! WalletActor.UnblockBitcoins(funds2)
+    instance ! WalletActor.BlockBitcoins(funds3, 1.BTC)
+    expectMsg(WalletActor.BlockedBitcoins(funds3))
   }
 
   var lastPersistenceId = 0
