@@ -14,6 +14,7 @@ v0.5.0:
 v0.4.2:
  - Bug fixing
    * Avoid self-crossing orders when clearing the order book
+   * Fix a bug that caused unconfirmed outputs to be spent
 
 v0.4.1:
  - Bug fixing
